--- a/Instacart_Analysis.ipynb
+++ b/Instacart_Analysis.ipynb
@@ -29,6 +29,34 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "XRtP2AoxWkf7",
+        "colab_type": "code",
+        "outputId": "1ba5d6da-3f9a-4ab3-80cc-e6770c2fd7b5",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 105
+        }
+      },
+      "source": [
+        "!pip install efficient_apriori"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Collecting efficient_apriori\n",
+            "  Downloading https://files.pythonhosted.org/packages/5b/cb/cd06eb983e4a67d9b127df6e3ece87dd7ebea145daa4250929531315bbff/efficient_apriori-1.0.0-py3-none-any.whl\n",
+            "Installing collected packages: efficient-apriori\n",
+            "Successfully installed efficient-apriori-1.0.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "qKU7M3ZhWv94",
         "colab_type": "code",
         "colab": {}
@@ -40,7 +68,9 @@
         "import seaborn as sns\n",
         "from IPython.display import display\n",
         "import time\n",
-        "\n",
+        "from efficient_apriori import apriori\n",
+        "import sys\n",
+        "import random \n",
         "colors = sns.color_palette()"
       ],
       "execution_count": 0,
@@ -51,7 +81,7 @@
       "metadata": {
         "id": "plsbWeC1wL3-",
         "colab_type": "code",
-        "outputId": "5f28ef21-9123-4149-8642-9000e74507cb",
+        "outputId": "c0631b08-1b8d-4f9a-de90-0e95885f8585",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 122
@@ -61,7 +91,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -79,69 +109,15 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "vxk50f6qtNLG",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 105
-        },
-        "outputId": "59580157-2cef-42d8-df02-b73ace2fed29"
-      },
-      "source": [
-        "!pip install efficient_apriori"
-      ],
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Collecting efficient_apriori\n",
-            "  Downloading https://files.pythonhosted.org/packages/5b/cb/cd06eb983e4a67d9b127df6e3ece87dd7ebea145daa4250929531315bbff/efficient_apriori-1.0.0-py3-none-any.whl\n",
-            "Installing collected packages: efficient-apriori\n",
-            "Successfully installed efficient-apriori-1.0.0\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "2gq22ddlwNoJ",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
         "path = '/content/drive/My Drive/Instacart/'\n",
-        "orders = pd.read_pickle(path + 'customers_orders10000.pkl')"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "5goV-GSbz6r7",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
+        "orders = pd.read_pickle(path + 'customers_orders10000.pkl')\n",
         "products = pd.read_csv(path + 'products.csv')\n",
         "productIdMap = products.set_index(['product_id'])['product_name'].to_dict()"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "4n9qD9ac5xh7",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "from efficient_apriori import apriori\n",
-        "itemsets, rules = apriori(orders['items'], min_support=0.01,  min_confidence=0.01)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -154,26 +130,18 @@
         "colab": {}
       },
       "source": [
+        "# Function that returns the size of an object in MB\n",
+        "def size(obj):\n",
+        "    return \"{0:.2f} MB\".format(sys.getsizeof(obj) / (1000 * 1000))\n",
+        "\n",
         "def itemsets_id_to_name(itemsets):\n",
         "  itemsets_names = {}\n",
         "  for k, v in itemsets.items():\n",
         "    itemsets_names[k] = {}\n",
         "    for k2, v2 in v.items():\n",
         "      itemsets_names[k][tuple([productIdMap[i] for i in k2])] = v2\n",
-        "  return itemsets_names"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "edIF5fgw1BRV",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "from efficient_apriori import Rule\n",
+        "  return itemsets_names\n",
+        "\n",
         "def rules_id_to_name(rules):\n",
         "  rules_name = [Rule(tuple([productIdMap[i] for i in rule.lhs]), \n",
         "                   tuple([productIdMap[i] for i in rule.rhs]),\n",
@@ -187,132 +155,131 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "u7SbrCDl9OYZ",
+        "id": "CGfqMoNA3LfS",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def compute_prediction(h1, h2, rule):\n",
+        "  predicted = [[i for i in rule.rhs] for rule in rule if set(rule.lhs).issubset(h1)]\n",
+        "  predicted = [item for sublist in predicted for item in sublist]\n",
+        "  predicted = set(predicted)\n",
+        "  return predicted\n",
+        "\n",
+        "def compute_recall(rules, X_test):\n",
+        "  test = X_test['items'].map(lambda x: random.sample(x, len(x)))\n",
+        "  recall = []\n",
+        "  for b in test:\n",
+        "    h1, h2 = set(b[0:int(len(b)/2)]), set(b[int(len(b)/2):])\n",
+        "    predicted = compute_prediction(h1, h2, rules)\n",
+        "    recall.append(len(predicted.intersection(h2))/len(h2))  \n",
+        "  return sum(recall) / len(recall) * 100 "
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Vkg22LwnXlle",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from sklearn.model_selection import KFold\n",
+        "cv = KFold(n_splits=25, random_state=42, shuffle=False)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WIERYCbPYCps",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 51
         },
-        "outputId": "49d08306-0a1f-4796-943c-fe17abd76e73"
+        "outputId": "b5d6a4bc-30cd-4861-aabf-80174447df4f"
       },
       "source": [
-        "itemsets_id_to_name(itemsets)"
+        "scores = []\n",
+        "for train_index, test_index in cv.split(orders['items']):\n",
+        "  X_train, X_test = orders.iloc[train_index], orders.iloc[test_index]\n",
+        "  _, rules = apriori(X_train['items'], min_support=0.01,  min_confidence=0.01)\n",
+        "  scores.append(compute_recall(rules, X_test))"
       ],
-      "execution_count": 65,
+      "execution_count": 31,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "{1: {('3D White Radiant Mint Flavor Whitening Toothpaste',): 72,\n",
-              "  ('93% Ground Beef',): 379,\n",
-              "  ('Aged Red Wine Vinegar',): 106,\n",
-              "  ('Baby Food Pears Squash',): 169,\n",
-              "  ('Balsamic Vinegar',): 64,\n",
-              "  ('Butter Croissant',): 74,\n",
-              "  ('Cannellini White Kidney Beans No Salt Added',): 365,\n",
-              "  ('Carb Balance Small Fajita Whole Wheat Tortillas',): 92,\n",
-              "  ('Chewy Peanut Peanut Butter Granola Bars',): 83,\n",
-              "  ('Chicken Quesadilla',): 62,\n",
-              "  ('Chocolate Peanut Butter',): 314,\n",
-              "  ('Choose-A-Sheet Regular Roll Paper Towels',): 207,\n",
-              "  ('Chopped Spinach Steamers',): 78,\n",
-              "  ('Classic Mixed Vegetables',): 94,\n",
-              "  ('Cranberries',): 99,\n",
-              "  ('Dairy Free Hazelnut Coconut Milk Creamer',): 183,\n",
-              "  ('Dark Chocolate Covered Goji Berries',): 71,\n",
-              "  ('European-Style Cultured Butter',): 79,\n",
-              "  ('Fresh Cut Green Beans',): 171,\n",
-              "  ('Freshly made pasta layered between a rich meat sauce and topped with Real Mozzarella cheese Lasagna with Meat & Sauce',): 78,\n",
-              "  ('Gluten Free Chocolate Coated Wafers',): 125,\n",
-              "  ('Limeade',): 190,\n",
-              "  ('Organic Broccoli Crown',): 399,\n",
-              "  ('Organic Chocolate Syrup',): 99,\n",
-              "  ('Organic Frozen Peas',): 1231,\n",
-              "  ('Organic Gluten & Wheat Free Homestyle Waffles',): 264,\n",
-              "  ('Organic Love Crunch Dark Chocolate Macaroon Granola',): 91,\n",
-              "  ('Organic Spelt Pretzels',): 153,\n",
-              "  ('Organic Tomato Puree',): 119,\n",
-              "  ('Original BBQ Sauce',): 179,\n",
-              "  ('Original High Efficiency Liquid Laundry Detergent',): 157,\n",
-              "  ('Original Spray',): 143,\n",
-              "  ('Premium Selects Brussels Sprouts',): 98,\n",
-              "  ('Pumpkin Fig Ancient Grain Granola',): 199,\n",
-              "  ('Pureed Baby Food Strawberries Carrots',): 94,\n",
-              "  ('Real French Vinaigrette Dressing',): 202,\n",
-              "  ('Ritz Peanut Butter Cracker Sandwiches',): 77,\n",
-              "  ('Soy Free Buttery Spread',): 385,\n",
-              "  ('Sriracha Hot Chili Sauce',): 270,\n",
-              "  ('Steamfresh Sweet Peas',): 284,\n",
-              "  ('Summer Strawberry Fruit Strip',): 80,\n",
-              "  ('Sweet Peas',): 154,\n",
-              "  ('Taboule Salad',): 191,\n",
-              "  ('The Original Fruit and Nut Food Bar - Peanut Butter Cookie',): 69,\n",
-              "  ('Three Cheese Tortellini',): 89,\n",
-              "  ('Total 2% with Raspberry Pomegranate Lowfat Greek Strained Yogurt',): 174,\n",
-              "  ('Traditional Basil Pesto Sauce',): 185,\n",
-              "  ('Traditional Egg Pasta Pappardelle',): 132,\n",
-              "  ('Tropical Punch',): 78,\n",
-              "  ('Unbleached Recycled Paper Towel Rolls',): 68,\n",
-              "  ('Wasabi Roasted Seaweed Snacks',): 163,\n",
-              "  ('Yellow Corn Organic Tortillas',): 155},\n",
-              " 2: {('93% Ground Beef', 'Organic Frozen Peas'): 73,\n",
-              "  ('Baby Food Pears Squash', 'Pureed Baby Food Strawberries Carrots'): 79,\n",
-              "  ('Organic Broccoli Crown', 'Organic Frozen Peas'): 147,\n",
-              "  ('Organic Frozen Peas', 'Cannellini White Kidney Beans No Salt Added'): 109,\n",
-              "  ('Organic Frozen Peas', 'Soy Free Buttery Spread'): 85}}"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 65
+          "output_type": "stream",
+          "text": [
+            "CPU times: user 3 µs, sys: 1e+03 ns, total: 4 µs\n",
+            "Wall time: 7.63 µs\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "l6SoCQvx9Wp2",
+        "id": "9oKzm7qBBLjS",
         "colab_type": "code",
+        "outputId": "c7b5b703-82d5-4a31-d606-29ba7b40378c",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 187
-        },
-        "outputId": "aadabe45-d7df-4c65-dedb-10470f84ce24"
+          "height": 442
+        }
       },
       "source": [
-        "rules_id_to_name(rules)"
+        "scores"
       ],
-      "execution_count": 66,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[{Organic Frozen Peas} -> {93% Ground Beef},\n",
-              " {93% Ground Beef} -> {Organic Frozen Peas},\n",
-              " {Pureed Baby Food Strawberries Carrots} -> {Baby Food Pears Squash},\n",
-              " {Baby Food Pears Squash} -> {Pureed Baby Food Strawberries Carrots},\n",
-              " {Organic Frozen Peas} -> {Organic Broccoli Crown},\n",
-              " {Organic Broccoli Crown} -> {Organic Frozen Peas},\n",
-              " {Soy Free Buttery Spread} -> {Organic Frozen Peas},\n",
-              " {Organic Frozen Peas} -> {Soy Free Buttery Spread},\n",
-              " {Cannellini White Kidney Beans No Salt Added} -> {Organic Frozen Peas},\n",
-              " {Organic Frozen Peas} -> {Cannellini White Kidney Beans No Salt Added}]"
+              "[7.317073170731707,\n",
+              " 5.894308943089431,\n",
+              " 5.691056910569105,\n",
+              " 8.130081300813007,\n",
+              " 9.552845528455284,\n",
+              " 8.94308943089431,\n",
+              " 7.520325203252034,\n",
+              " 9.146341463414634,\n",
+              " 7.317073170731707,\n",
+              " 9.552845528455284,\n",
+              " 6.504065040650407,\n",
+              " 7.723577235772358,\n",
+              " 7.113821138211382,\n",
+              " 8.536585365853659,\n",
+              " 7.317073170731707,\n",
+              " 7.755102040816326,\n",
+              " 6.73469387755102,\n",
+              " 13.673469387755102,\n",
+              " 7.346938775510205,\n",
+              " 6.938775510204081,\n",
+              " 4.8979591836734695,\n",
+              " 11.224489795918368,\n",
+              " 3.2653061224489797,\n",
+              " 6.530612244897959,\n",
+              " 8.36734693877551]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 66
+          "execution_count": 32
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "VE_X1Req9cZ5",
+        "id": "q9BcO1ebBOS7",
         "colab_type": "code",
         "colab": {}
       },
