--- a/Instacart_Analysis.ipynb
+++ b/Instacart_Analysis.ipynb
@@ -13,7 +13,7 @@
       "name": "python3",
       "display_name": "Python 3"
     },
-    "accelerator": "GPU"
+    "accelerator": "TPU"
   },
   "cells": [
     {
@@ -31,7 +31,7 @@
       "metadata": {
         "id": "XRtP2AoxWkf7",
         "colab_type": "code",
-        "outputId": "1ba5d6da-3f9a-4ab3-80cc-e6770c2fd7b5",
+        "outputId": "8d10e67d-77cf-4937-aa22-e985765f1f14",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 105
@@ -71,6 +71,8 @@
         "from efficient_apriori import apriori\n",
         "import sys\n",
         "import random \n",
+        "from sklearn.model_selection import KFold\n",
+        "\n",
         "colors = sns.color_palette()"
       ],
       "execution_count": 0,
@@ -81,7 +83,7 @@
       "metadata": {
         "id": "plsbWeC1wL3-",
         "colab_type": "code",
-        "outputId": "c0631b08-1b8d-4f9a-de90-0e95885f8585",
+        "outputId": "be8ee6ba-a6d9-45d2-a2f6-c35897531142",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 122
@@ -181,13 +183,26 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Vkg22LwnXlle",
+        "id": "WIERYCbPYCps",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "from sklearn.model_selection import KFold\n",
-        "cv = KFold(n_splits=25, random_state=42, shuffle=False)"
+        "def k_cross_validation_score(orders, k=30):\n",
+        "  cv = KFold(n_splits=k, shuffle=True)\n",
+        "  s1 = int(len(orders)/k)\n",
+        "  s2 = len(orders) - s1\n",
+        "  count = 1\n",
+        "  scores = []\n",
+        "  print('Train Data Size {0} Test Data Size {1}'.format(s2, s1))\n",
+        "  for train_index, test_index in cv.split(orders['items']):\n",
+        "    X_train, X_test = orders.iloc[train_index], orders.iloc[test_index]\n",
+        "    _, rules = apriori(X_train['items'], min_support=0.001,  min_confidence=0.001)\n",
+        "    score_1 = compute_recall(rules, X_test)\n",
+        "    scores.append(score_1)\n",
+        "    print('[{}/{}] Score {}'.format(count, k, score_1))\n",
+        "    count = count + 1 \n",
+        "  return scores"
       ],
       "execution_count": 0,
       "outputs": []
@@ -195,28 +210,26 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "WIERYCbPYCps",
+        "id": "9oKzm7qBBLjS",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 51
+          "height": 85
         },
-        "outputId": "b5d6a4bc-30cd-4861-aabf-80174447df4f"
+        "outputId": "bbd90706-f942-4ad3-c567-6c86e3062b65"
       },
       "source": [
-        "scores = []\n",
-        "for train_index, test_index in cv.split(orders['items']):\n",
-        "  X_train, X_test = orders.iloc[train_index], orders.iloc[test_index]\n",
-        "  _, rules = apriori(X_train['items'], min_support=0.01,  min_confidence=0.01)\n",
-        "  scores.append(compute_recall(rules, X_test))"
+        "%time scores = k_cross_validation_score(orders)"
       ],
-      "execution_count": 31,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "CPU times: user 3 µs, sys: 1e+03 ns, total: 4 µs\n",
-            "Wall time: 7.63 µs\n"
+            "Train Data Size 5936 Test Data Size 204\n",
+            "[1/30] Score 39.75609756097561\n",
+            "[2/30] Score 43.41463414634146\n",
+            "[3/30] Score 42.4390243902439\n"
           ],
           "name": "stdout"
         }
@@ -225,61 +238,36 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9oKzm7qBBLjS",
+        "id": "QA8kqBhgkjeM",
         "colab_type": "code",
-        "outputId": "c7b5b703-82d5-4a31-d606-29ba7b40378c",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 442
-        }
+          "height": 164
+        },
+        "outputId": "003cd9dc-d6bc-4854-950b-c4ca96a83265"
       },
       "source": [
-        "scores"
+        "sum(scores)"
       ],
-      "execution_count": 32,
+      "execution_count": 21,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[7.317073170731707,\n",
-              " 5.894308943089431,\n",
-              " 5.691056910569105,\n",
-              " 8.130081300813007,\n",
-              " 9.552845528455284,\n",
-              " 8.94308943089431,\n",
-              " 7.520325203252034,\n",
-              " 9.146341463414634,\n",
-              " 7.317073170731707,\n",
-              " 9.552845528455284,\n",
-              " 6.504065040650407,\n",
-              " 7.723577235772358,\n",
-              " 7.113821138211382,\n",
-              " 8.536585365853659,\n",
-              " 7.317073170731707,\n",
-              " 7.755102040816326,\n",
-              " 6.73469387755102,\n",
-              " 13.673469387755102,\n",
-              " 7.346938775510205,\n",
-              " 6.938775510204081,\n",
-              " 4.8979591836734695,\n",
-              " 11.224489795918368,\n",
-              " 3.2653061224489797,\n",
-              " 6.530612244897959,\n",
-              " 8.36734693877551]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 32
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-21-a30f4834dd06>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscores\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'scores' is not defined"
+          ]
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "q9BcO1ebBOS7",
+        "id": "zzg4T1k0qfO3",
         "colab_type": "code",
         "colab": {}
       },
